допиливание results.html

--- a/anon/polls/templates/polls/results.html
+++ b/anon/polls/templates/polls/results.html
@@ -5,11 +5,12 @@
 {% block content %}
     <h1 align="center">Результаты заседания от {{ event.date }}</h1>
     <h2 align="center">
-            {% for question in questionlist %}
-            {{ question.text }} <br/>
-            За: {{ question.choise_id.za }}
-            Против: {{ question.choise_id.protiv }}
-            Воздержался: {{ question.choise_id.abstained }}
+            {% for choise in choises %}
+            {{ choise.question_id.text }} <br/>
+
+            За: {{ choise.za }}
+            Против: {{ choise.protiv }}
+            Воздержался: {{ choise.abstained }}
             <br/>
             {% endfor %}
 
