--- a/anon/polls/templates/polls/results.html
+++ b/anon/polls/templates/polls/results.html
@@ -10,7 +10,7 @@
 
             За: {{ choise.za }}
             Против: {{ choise.protiv }}
-            Воздержался: {{ choise.abstained }}
+            Воздержалось: {{ choise.abstained }}
             <br/>
             {% endfor %}
 
